--- a/ping.html
+++ b/ping.html
@@ -6,6 +6,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="/css/ping.css">
   <link rel="icon" href="/resources/ping-coming-soon-page-master/images/favicon-32x32.png">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 <body>
   <section id="body">
@@ -22,6 +23,11 @@
       </div>
     </div>
     <img src="/resources/ping-coming-soon-page-master/images/illustration-dashboard.png" alt="" id="illustration">
+    <div class="icon">
+      <a class="facebook" href=""><i class="bi bi-facebook"></i></a>
+      <a class="twitter" href=""><i class="bi bi-twitter"></i></a>
+      <a class="insta" href=""><i class="bi bi-instagram"></i></a>
+    </div>
   </section>
 </body>
 </html>
